update social id in config

--- a/_config.yml
+++ b/_config.yml
@@ -71,9 +71,9 @@ github_username: sylee-skhu # your GitHub user name
 gitlab_username: # your GitLab user name
 x_username: # your X handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-linkedin_username: sy1007.lee@gmail.com # your LinkedIn user name
+linkedin_username: sangyun-lee-434b51125 # your LinkedIn user name
 telegram_username: # your Telegram user name
-scholar_userid: sy1007.lee@gmail.com # your Google Scholar ID
+scholar_userid: 7ahfpgsAAAAJ # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 orcid_id: 0000-0003-4842-5668 # your ORCID ID
@@ -366,7 +366,7 @@ enable_math:                true   # enables math typesetting (uses MathJax)
 enable_tooltips:            false  # enables automatic tooltip links generated
                                    # for each section titles on pages and posts
 enable_darkmode:            true   # enables switching between light/dark modes
-enable_navbar_social:       true   # enables displaying social links in the
+enable_navbar_social:       false  # enables displaying social links in the
                                    # navbar on the about page
 enable_project_categories:  true   # enables categorization of projects into
                                    # multiple categories
