--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name
 
 url: https://sylee-skhu.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
-last_updated: false # set to true if you want to display last updated in the footer
+last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
 # -----------------------------------------------------------------------------
@@ -104,7 +104,7 @@ wechat_qr: # filename of your wechat qr-code saved as an image (e.g., wechat-qr.
 
 contact_note: 
 # contact_note: >
-#   You can even add a little note about which of these is the best way to reach you.
+  Best way to reach me is via email or linkedin.
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -171,6 +171,9 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  people:
+    output: true
+    permalink: /people/:path/
 
 announcements:
   enabled: true
