--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Sangyun Lee
     - name: Date of Birth
-      value: 14th March 1879
+      value: 7th October 1988
     - name: Languages
-      value: English, German
+      value: Korean, English
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: Yonsei University, Seoul, Republic of Korea
+      year: 2011 - 2018
       description:
         - Description 1.
         - Description 2.
