--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -34,11 +34,24 @@
        - Division of Information Technology
 
     - title: Senior Researcher
-      institution: Samsung Research, Samsung Electronics Co. Ltd., Seoul, Republic of Korea
+      institution: Samsung Research, Samsung Electronics Co., Ltd., Seoul, Republic of Korea
       year: Mar. 2018 - Aug. 2021
       description:
        - Robot Center
        - Autonomous Machine Lab
+
+- title: Projects
+  type: time_table
+  contents:
+    - title: Development of Core Technology for Preventing Identity Theft
+      institution: SECUCHART GLOBAL Co., Ltd.
+      year: May. 2023 - Dec. 2023
+    - title: A Context-aware Multiple Object Tracking with Temporal Shifted Transformer
+      institution: Sungkonghoe University
+      year: Aug. 2022 - Jul. 2023
+    - title: Research on AI integration technology for comprehensive context-aware multiple object tracking
+      institution: Ministry of Science and ICT / National Research Foundation of Korea
+      year: Mar. 2022 - Feb. 2024
 
 - title: Honors and Awards
   type: time_table
