New running record

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -84,13 +84,13 @@
   contents:
     - title: Sports
       items:
-        - Running (Full 4:10:01 / Half 1:47:50 / 10K 0:45:45)
+        - Running (Full 3:48:57 / Half 1:47:50 / 10K 0:45:45)
         - Soccer
         - Baseball
 
     - title: Games
       items:
-        - League of Legends (Diamond in 2023)
+        - League of Legends (Diamond Rank)
 
     - title: Drinking
       items:
