add a new project

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -45,6 +45,9 @@
   contents:
     - title: Real-time monitoring technology for identifying hazardous situations for workers in industrial settings using video-based AI
       institution: the Ministry of SMEs and Startups
+      year: Aug. 2024 - Jul. 2026
+    - title: Real-time monitoring technology for identifying hazardous situations for workers in industrial settings using video-based AI
+      institution: the Ministry of SMEs and Startups
       year: Jul. 2024 - Dec. 2026
     - title: Development of Core Technology for Preventing Identity Theft
       institution: SECUCHART GLOBAL Co., Ltd.
