--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -44,10 +44,10 @@
   type: time_table
   contents:
     - title: Commercialization of a One-Stop Smart Solution for Small and Medium Construction Site Management (Scheduling, Safety) Based on Structured and Unstruct <br> 정형/비정형 데이터 기반 원스톱 중소건설 현장관리(공정, 안전) 스마트 솔루션의 기술사업화
-      institution: the Ministry of SMEs and Startups
+      institution: Ministry of SMEs and Startups
       year: Aug. 2024 - Jul. 2026
     - title: Real-time monitoring technology for identifying hazardous situations for workers in industrial settings using video-based AI <br> 영상 AI 기반 산업현장 작업자 위험상황 실시간 모니터링 기술
-      institution: the Ministry of SMEs and Startups
+      institution: Ministry of SMEs and Startups
       year: Jul. 2024 - Dec. 2026
     - title: Development of Core Technology for Preventing Identity Theft <br> 명의도용 사고방지를 위한 요소 기술 개발
       institution: SECUCHART GLOBAL Co., Ltd.
