add koreaen name of funding agency

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -44,22 +44,22 @@
   type: time_table
   contents:
     - title: Commercialization of a One-Stop Smart Solution for Small and Medium Construction Site Management (Scheduling, Safety) Based on Structured and Unstruct <br> 정형/비정형 데이터 기반 원스톱 중소건설 현장관리(공정, 안전) 스마트 솔루션의 기술사업화
-      institution: Ministry of SMEs and Startups
+      institution: Ministry of SMEs and Startups (중소벤처기업부)
       year: Aug. 2024 - Jul. 2026
     - title: "Making Action Detection Practical: Leveraging 2D CNNs for Real-Time and Online Applications <br> 행동 탐지의 실용화: 실시간 및 온라인 응용을 위한 2D CNN 활용"
-      institution: Sungkonghoe University
+      institution: Sungkonghoe University (성공회대학교)
       year: Aug. 2024 - Jul. 2025
     - title: Real-time monitoring technology for identifying hazardous situations for workers in industrial settings using video-based AI <br> 영상 AI 기반 산업현장 작업자 위험상황 실시간 모니터링 기술
-      institution: Ministry of SMEs and Startups
+      institution: Ministry of SMEs and Startups (중소벤처기업부)
       year: Jul. 2024 - Dec. 2026
     - title: Development of Core Technology for Preventing Identity Theft <br> 명의도용 사고방지를 위한 요소 기술 개발
-      institution: SECUCHART GLOBAL Co., Ltd.
+      institution: SECUCHART GLOBAL Co., Ltd. (시큐차트글로벌(주))
       year: May. 2023 - Dec. 2023
     - title: A Context-aware Multiple Object Tracking with Temporal Shifted Transformer <br> Temporal Shifted Transformer를 이용한 상황 인지 다중 물체 추적
-      institution: Sungkonghoe University
+      institution: Sungkonghoe University (성공회대학교)
       year: Aug. 2022 - Jul. 2023
     - title: Research on AI integration technology for comprehensive context-aware multiple object tracking <br> 포괄적 맥락 인식 기반 다중 물체 추적을 위한 AI 통합 기술 연구
-      institution: Ministry of Science and ICT
+      institution: Ministry of Science and ICT (과학기술정보통신부)
       year: Mar. 2022 - Feb. 2024
 
 - title: Honors and Awards
